--- a/book.bib
+++ b/book.bib
@@ -307,7 +307,7 @@ edition = {1st},
   pages={97243--97250},
   year={2021},
   publisher={IEEE},
-  doi={https://doi.org/10.1109/ACCESS.2021.3095222}
+  doi={10.1109/ACCESS.2021.3095222}
 }
 
 @book{kubat2017introduction,
@@ -329,6 +329,13 @@ edition = {1st},
   author={Domingos, Pedro},
   year={2015},
   publisher={Basic Books}
+}
+
+@book{applied_stats_healthcare,
+title={Applied Statistics in Healthcare Research},
+author={Montelpare, William J.},
+year={2021},
+publisher={University of Prince Edward Island}
 }
 
 @article{domingos2012few,
@@ -442,4 +449,52 @@ edition = {1st},
  volume={12},
  pages={2825--2830},
  year={2011}
+}
+
+@article{de2021conceptualising,
+  title={Conceptualising natural and quasi experiments in public health},
+  author={de Vocht, Frank and Katikireddi, Srinivasa Vittal and McQuire, Cheryl and Tilling, Kate and Hickman, Matthew and Craig, Peter},
+  journal={BMC medical research methodology},
+  volume={21},
+  number={1},
+  pages={1--8},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{pearl2000causality,
+  title={Causality: models, reasoning and inference Cambridge University press},
+  author={Pearl, Judea},
+  journal={Cambridge, MA, USA},
+  volume={9},
+  pages={10--11},
+  year={2000}
+}
+
+
+@article{pokropek2016introduction,
+  title={Introduction to instrumental variables and their application to large-scale assessment data},
+  author={Pokropek, Artur},
+  journal={Large-scale Assessments in Education},
+  volume={4},
+  number={1},
+  pages={1--20},
+  year={2016},
+  publisher={Springer}
+}
+
+@incollection{dinardo2010natural,
+  title={Natural experiments and quasi-natural experiments},
+  author={DiNardo, John},
+  booktitle={Microeconometrics},
+  pages={139--153},
+  year={2010},
+  publisher={Springer}
+}
+
+@misc{rossi1985evaluation,
+  title={Evaluation: a systematic approach. Beverly Hills},
+  author={Rossi, Peter H and Freeman, Howard E and Wright, Sonia R},
+  year={1985},
+  publisher={CA: sage}
 }
