updated content, added photos of yersin and kitasato

--- a/03-ScientificInference.Rmd
+++ b/03-ScientificInference.Rmd
@@ -643,6 +643,24 @@ From [@vega2021hume].
 
 ### Yersinia pestis
 
+```{r, eval=knitr::is_html_output(excludes = "epub"), results = 'asis', echo = F}
+cat(
+'<figure class="wrap-figure">
+<img src="Figures/kitasato.png">
+<figcaption>Kitasato Shibasaburō</figcaption>
+</figure>'
+)
+```
+
+```{r, eval=knitr::is_html_output(excludes = "epub"), results = 'asis', echo = F}
+cat(
+'<figure class="wrap-figure">
+<img src="Figures/yersin.jpg">
+<figcaption>Alexandre Yersin</figcaption>
+</figure>'
+)
+```
+
 This excerpt from Plague and Cholera is a great example of how laboratory conditions can act as an unintended auxiliary hypothesis that must be taken into account during research. It was 1894 in Hong Kong and all was set for an intellectual duel between Alexandre Yersin and Kitasato Shibasaburō that eventually unveiled the cause of the disease plague.
 
 > From the moment of his disembarkation in torrential rain, Yersin sees the bodies of plague victims lying in the street, in pools of standing water, in parks, aboard moored junks. British soldiers, acting on authority, remove the sick and empty their houses, pile everything up and set fire to it. [...] 
